[package]
name = "pokedex_rs"
version = "0.2.1"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2021"
rust-version = "1.70.0"
default-run = "pokedex_rs"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/pokerust#readme"
repository = "https://github.com/clechasseur/pokerust"
documentation = "https://docs.rs/pokedex_rs/"

description = "Pokedex implemented in Rust 🦀"

keywords = [ "actix", "async", "http", "pokemon", "web" ]
categories = [ "web-programming::http-server" ]

include = [ "migrations/**/*", "seed/**/*", "src/**/*", "tests/**/*", "build.rs", "Cargo.lock", "Cargo.toml", "diesel.toml", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(backtrace_support)" ]

[dependencies]
anyhow = "1.0.89"
actix-web = "4.5.1"
actix-web-validator = "5.0.1"
cargo_metadata = "0.18.1"
csv = "1.3.0"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
diesel = { version = "2.1.5", features = ["postgres", "without-deprecated"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
diesel_derives = { version = "2.1.3", features = ["postgres", "without-deprecated"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
env_logger = "0.10.2"
log = "0.4.21"
paste = "1.0.15"
regex = "1.11.0"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde-this-or-that = "0.4.2"
serde_with = "3.11.0"
simple_logger = "4.3.3"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "3.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web", "debug-embed"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
actix-http = "3.9.0"
assert_matches = "1.5.0"
mime = "0.3.17"
serde_urlencoded = "0.7.1"
serial_test = { version = "3.2.0", features = ["file_locks"] }
test-log = "0.2.14"

[build-dependencies]
rustc_version = "0.4.1"
